2008-03-02  Sergey Poznyakoff  <gray@gnu.org.ua>

	* bootstrap.conf (XGETTEXT_OPTIONS): Update flags.
	* configure.ac, NEWS: Version 1.9.90
	* m4/.cvsignore: Add environ.m4

	* po/ca.po, po/es.po, po/fr.po, po/pl.po, po/ro.po, po/ru.po,
	po/rw.po, po/sv.po, po/uk.po, po/LINGUAS, po/ChangeLog: Remove.
	We will get po files directly from translationproject.org.

2008-03-01  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mh/folder.c, mh/mh_argp.c, mh/mh_getopt.c, mh/mh_init.c,
	mh/rmf.c: Use mu_program_name instead of
	program_invocation_short_name. 

2008-02-29  Sergey Poznyakoff  <gray@gnu.org.ua>

	* mh/mh_ctx.c (mh_context_read): Allow for header continuation
	lines.
	* mh/mh_whom.c (mh_whom): Improve diagnostics.

2008-02-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* examples/Makefile.am (AM_LDFLAGS): Remove.
	(LDADD): Add the necessary libraries.
	(aclck_LDADD, argcv_LDADD): Remove.
	(muemail_LDADD): Needs MU_APP_LIBRARIES.

2008-02-26  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libcfg/init.c: Fix error reporting.
	* mailbox/cfg_driver.c (mu_parse_config): Fix memory leak.

2008-02-21  Sergey Poznyakoff  <gray@gnu.org.ua>

	* libsieve/load.c: Add forward declaration of _add_load_dir
	* mailbox/parsedate.y (DATE_SET): Fix bug introduced 2008-01-02:
	val can sometimes be negative.
	* examples/Makefile.am (aclck_LDADD): Define.

2008-02-09  Sergey Poznyakoff  <gray@gnu.org.ua>

	* comsat/comsat.c (comsat_cfg_param): Reword a help message
	for require-tty.
	* examples/header.c (cmd_readline): New function.
	New command 'readline'.
	* po/POTFILES.in: Remove stray reference to muerrno.c

2008-02-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	* comsat/action.c (act_getline): Bugfix. Do not return eof
	on an empty line. Reported by Damon Harper.

2008-02-06  Sergey Poznyakoff  <gray@gnu.org.ua>

	* examples/pop3client.c: Implement variable expansions in the
	prompt. 

	* NEWS: Update.

	* pop3d/bulletin.c (read_bulletin_db): Return success if db does
	not exist.