@@ -1,6 +1,6 @@
 # Bootstrap configuration.
 
-# Copyright (C) 2006, 2007 Free Software Foundation, Inc.
+# Copyright (C) 2006, 2007, 2008 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -24,7 +24,6 @@ build_aux=scripts
 # includes them because of gettext dependencies.
 avoided_gnulib_modules='
 	--avoid=lock
-	--avoid=size_max
 '
 
 # gnulib modules used by this package.
@@ -73,11 +72,15 @@ excluded_files='
     m4/lcmessage.m4
     m4/lock.m4
     m4/printf-posix.m4
-    m4/size_max.m4
     m4/uintmax_t.m4
     m4/ulonglong.m4
     m4/visibility.m4
 '
+
+gnulib_extra_files="$gnulib_extra_files
+	m4/inttostr.m4
+"
+
 # Read local configuration file
 if [ -r .bootstrap ]; then
   echo "$0: Reading configuration file .bootstrap"
