@@ -2,6 +2,9 @@
 # A module name per line. Empty lines and comments are ignored.
 
 # FIXME: regex and glob are used by libmailutils...
+# FIXME: intprops and stdint are not used directly, they are needed for
+# inttostr, which is included in mailbox. Another inttostr dependency,
+# m4/inttostr.m4, is set in bootstrap.conf.
 
 alloca
 argp
@@ -10,12 +13,14 @@ fnmatch
 getline
 getpass-gnu
 gettext
+intprops
 malloc
 mbswidth
 obstack
 realloc
 setenv
 snprintf
+stdint
 strcase
 strtok_r
 vasprintf
